salesforce/force-app/main/default/objects/Encapsulation_Detail__c/Encapsulation_Detail__c.object-meta.xml
<CustomObject>
    <description>Capsule filling process costs</description>
    <label>Encapsulation Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encapsulation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>