salesforce/force-app/main/default/objects/Encapsulation_Detail__c/fields/Capsule_Cost__c.field-meta.xml
<CustomField>
    <fullName>Capsule_Cost__c</fullName><label>Capsule Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>