salesforce/force-app/main/default/objects/Encapsulation_Detail__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName><label>Capsule Color</label><length>50</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>