salesforce/force-app/main/default/objects/Encapsulation_Detail__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <referenceTo>Formula__c</referenceTo>
    <relationshipLabel>Encapsulation Details</relationshipLabel>
    <relationshipName>Encapsulation_Detail__c_r</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>