salesforce/force-app/main/default/objects/Encapsulation_Detail__c/fields/Type_of_Capsule__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Capsule__c</fullName><label>Type of Capsule</label><length>200</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>